@@ -1,5 +1,11 @@
 2003-10-31  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Add more comments, don't leak as much memory, and update the
+	extract buttons as tracks are selected to be ripped.
+
+2003-10-31  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extracting.c:
 	Return an GError in create_directory_for(), and display error
 	dialogs if the directory cannot be created.  Clamp the progress
